<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/one"
                android:textOn="@string/one" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/two"
                android:textOn="@string/two" />

            <ToggleButton
                android:id="@+id/toggleButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/three"
                android:textOn="@string/three" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ToggleButton
                android:id="@+id/toggleButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/four"
                android:textOn="@string/four" />

            <ToggleButton
                android:id="@+id/toggleButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/five" />

            <ToggleButton
                android:id="@+id/toggleButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/six"
                android:textOn="@string/six" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ToggleButton
                android:id="@+id/toggleButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/seven" />

            <ToggleButton
                android:id="@+id/toggleButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/eight"
                android:textOn="@string/eight" />

            <ToggleButton
                android:id="@+id/toggleButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/nine"
                android:textOn="@string/nine" />
        </TableRow>
    </TableLayout>
</LinearLayout>